--- a/src/app/view/pacientes/pacientes.component.html
+++ b/src/app/view/pacientes/pacientes.component.html
@@ -119,7 +119,6 @@
   </div>
 </div>
 
-
 <!-- Modal para agregar/editar paciente -->
 <div class="modal fade" id="modalAgregarPaciente" tabindex="-1" aria-hidden="true" data-bs-backdrop="static">
   <div class="modal-dialog modal-dialog-centered modal-lg">
@@ -137,9 +136,21 @@
 
           <!-- 👤 Datos personales -->
           <div class="mb-4">
-            <h6 class="text-primary mb-2">👤 Datos personales</h6>
-            <div class="row g-3">
+            <h6 class="text-primary mb-3">👤 Datos personales</h6>
 
+            <!-- Switch para menor sin cédula -->
+            <div class="row mb-3">
+              <div class="col-md-12">
+                <div class="form-check form-switch" style="margin-left: 20px;">
+                  <input class="form-check-input" type="checkbox" id="esMenorSinCedula"
+                    formControlName="esMenorSinCedula">
+                  <label class="form-check-label fw-medium text-dark-label" for="esMenorSinCedula">
+                    ¿El paciente es menor de edad y no posee cédula?
+                  </label>
+                </div>
+              </div>
+            </div>
+            <div class="row g-3">
               <!-- Nombre Completo -->
               <div class="col-md-6">
                 <label class="form-label fw-medium text-dark-label">
@@ -157,7 +168,8 @@
               <!-- Cédula -->
               <div class="col-md-6">
                 <label class="form-label fw-medium text-dark-label">
-                  Cédula <span class="text-danger">*</span>
+                  {{ formPaciente.get('esMenorSinCedula')?.value ? 'Cédula del Representante' : 'Cédula' }} <span
+                    class="text-danger">*</span>
                 </label>
                 <input type="text" class="form-control border-2 py-2" formControlName="cedula"
                   placeholder="Ej: 12345678" minlength="6" maxlength="9">
