Ajuste key e id en pacientes e historias

--- a/src/app/view/pacientes/pacientes.component.html
+++ b/src/app/view/pacientes/pacientes.component.html
@@ -85,7 +85,7 @@
               <td>{{ paciente.fechaRegistro }}</td>
 
               <td>
-                <button class="btn btn-info btn-sm" (click)="verHistorias(paciente.key)">📖 Ver
+                <button class="btn btn-info btn-sm" (click)="verHistorias(paciente)">📖 Ver
                   Historias</button>
               </td>
               <td>
