Desabilitar el boton guardar o actualizar en paciente e historias

--- a/src/app/view/historias-medicas/historias-medicas.component.html
+++ b/src/app/view/historias-medicas/historias-medicas.component.html
@@ -1135,8 +1135,10 @@
                 <i class="bi bi-x-circle"></i> Cancelar
               </button>
               <button type="submit" class="btn btn-primary" (click)="guardarHistoria()"
-                [disabled]="!historiaModificada() || historiaForm.invalid">
-                <i class="bi bi-save"></i> {{ modoEdicion ? 'Actualizar' : 'Guardar' }}
+                [disabled]="cargando || !historiaModificada() || historiaForm.invalid">
+                <i class="bi bi-save" *ngIf="!cargando"></i>
+                <span *ngIf="cargando" class="spinner-border spinner-border-sm"></span>
+                {{ modoEdicion ? 'Actualizar' : 'Guardar' }}
               </button>
             </div>
           </div>
